# giflib

./: CMakeLists.txt  dgif_lib.c  egif_lib.c  gif_font.c  gif_hash.h  gif_lib_private.h  gifinto.c
lib/: dgif_lib.c  egif_lib.c  gif_font.c  gif_lib.h  gif_lib_private.h
util/: CMakeLists.txt  gifinto.c
