add_library(getarg getarg.c qprintf.c)
target_link_libraries(getarg giflib)

function(add_giflib_util name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} giflib getarg)
endfunction()

add_giflib_util(gif2rgb)
add_giflib_util(gifbg)
add_giflib_util(gifbuild)
add_giflib_util(gifclrmp)
add_giflib_util(gifcolor)
add_giflib_util(gifecho)
add_giflib_util(giffilter)
add_giflib_util(giffix)
add_giflib_util(gifhisto)
add_giflib_util(gifinto)
add_giflib_util(gifsponge)
add_giflib_util(giftext)
if(HAVE_GETOPT_H)
    add_giflib_util(giftool)
endif()
add_giflib_util(gifwedge)
